@@ -14,6 +14,7 @@
     * 4610 FIX: Fixed error in graph displaying views with invalid perfdata strings...
     * 4474 FIX: graphs for fileinfo checks: the size value was displayed without unit information
     * 4669 FIX: Fixed possible exception in view dashlets (e.g. single event views)...
+    * 4671 FIX: Metrics: Fixed exceptions when trying to parse perfdata with range warn/crit...
 
     WATO:
     * 4558 FIX: Set correct file permissions for WATO snapshots
